# 0722-bootcamp-sql

./: .gitignore  LICENSE  README.md  client.py  index.md  pyproject.toml  server.py  sql-cli.py  teste_dia_3.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: package-release.yml  python-testing.yml
csvms/: __init__.py  catalog.py  cli_csvms.py  engine.py  exceptions.py  index.py  schema.py  table.py
examples/: ddl-indices.ipynb  dml-ddl.ipynb  dql-algebra.ipynb  dql-joins.ipynb  dql-sql.ipynb  spark.ipynb
issue15/: issue15.py
issue16/: issue16.py
issue_7/: frutas.sql.txt  issue_7.py
sql/: lake.sql
sql/locals/: locations.json
sql/users/: randomusers.json
tests/core/: test_joins.py  test_operations.py  test_project.py  test_schema.py  test_scripts.py
tests/tasks/: __init__.py  milestones.ipynb  sql_data.sql  sql_data_test.sql  test_day1.py  test_day2.py
