[tool.poetry]
name = "csvms"
version = "0.2.14"
description = "Comma-separated values management system"
authors = ["Didone <tiago.didone@compasso.com.br>"]
readme = "README.md"
license = "MIT"
homepage = "https://didone.github.io/csvms/"
repository = "https://github.com/Didone/csvms.git"
keywords = ["bootcamp","csv","dbms","database","relational-algebra"]
classifiers = [
    "Topic :: Database",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = { version="^6.15.0", optional = true}
mo-sql-parsing = { version="^8.185.22160", optional = true}
docopt = { version="^0.6.2", optional = true}

[tool.poetry.extras]
bootcamp = ["ipykernel","mo-sql-parsing","docopt"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
pylint = "^2.13.9"
pyspark = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
